# Vermilion

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  _config.yml  index.html  main.cpp
Modules/: FindAssimp.cmake
_includes/: page-header.html
core/: common.h  compat.h
core/accelerators/: IntersectionInfo.h  Ray.h  bbox.cpp  bbox.h  bvh.cpp  bvh.h  object.h  triangle.cpp  triangle.h
core/bvh/: BVH.cpp  BVH.h  Object.h
core/camera/: camera.cpp  camera.h
core/camera/frameTile/: frameTile.cpp  frameTile.h
core/engines/: .renderEngine.cpp.swp  loggingEngine.cpp  loggingEngine.h  meshEngine.cpp  meshEngine.h  renderEngine.cpp  renderEngine.h
core/frameTile/: frameTile.cpp  frameTile.h
core/integrators/: integratorConstants.h  integrators.cpp  integrators.h  pathtracer.cpp  renderkernel.cu
core/nvidia/: CudaBVH.cpp  CudaBVH.h  linear_math.h
core/renderer/: renderer.cpp  renderer.h  tools.h
core/types/: types.h
